[INTEGRATION] fix overflowing work tiles

--- a/assets/css/front/main.styl
+++ b/assets/css/front/main.styl
@@ -29,7 +29,7 @@ a
 .main-content
   width px2em(930)
   margin 0 auto
-  padding 1px
+  padding 1px 0 7em
   position relative
 
 .hw-title
